Set up everything for Heroku, follwing the tutorial

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -13,3 +13,12 @@
  *= require_tree .
  *= require_self
  */
+
+@import "bootstrap";
+@import "font-awesome-sprockets";
+@import "font-awesome";
+
+.container_fluid {
+    padding-top: 50px;
+    padding-left: 50px;
+}
