--- a/app/assets/stylesheets/footer.css.scss
+++ b/app/assets/stylesheets/footer.css.scss
@@ -1,6 +1,6 @@
 /* All borrowed from the introduction video, found here: https://www.udemy.com/ruby-on-rails-a-beginners-guide-free */
 .footer-distributed{
-    background-color: #292c2f;
+    background-color: #3E3F3A;
     box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.12);
     box-sizing: border-box;
     width: 100%;
