--- a/app/views/layouts/_foot.html.erb
+++ b/app/views/layouts/_foot.html.erb
@@ -1,3 +1,5 @@
+<!-- Adopted from https://www.udemy.com/ruby-on-rails-a-beginners-guide-free -->
+
 <footer class="footer-distributed">
     <div class="footer-left">
         <h3>DoYeun<span>Kim</span></h3>
@@ -14,7 +16,7 @@
             ·
             <a href="#">Contact</a>
         </p>
-        <p class="footer-company-name">Company Name &copy; 2015</p>
+        <p class="footer-company-name">Company Name &copy; 2019</p>
         <div class="footer-icons">
             <a href="#"><i class="fab fa-facebook"></i></a>
             <a href="#"><i class="fab fa-twitter"></i></a>
