--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -1,10 +1,13 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="#">Navbar</a>
+<nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+
+    <%= link_to "DoYeun's Articles", root_path, {class: "navBar-brand", style: "color:#e07727"} %>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
-      
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+    
+
+
+    <div class="collapse navbar-collapse" id="navbarColor01">
         <ul class="navbar-nav mr-auto">
             <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -19,15 +22,23 @@
             </li>
         </ul>
         <ul class="navbar-nav">
-                <li class="nav-item">
-                    <%= link_to "Sign Up", new_user_registration_path, class: "nav-link" %>
-                </li>
-                <li class="nav-item">
-                    <%= link_to "Sign In", new_user_session_path, class: "nav-link" %>
-                </li>
-                <li class="nav-item">
-                    <%= link_to "Sign Out", destroy_user_session_path, method: :delete, class: "nav-link" %>
-                </li>            
-            </ul>
+            <li class="nav-item">
+                <%= link_to "About Us", pages_about_path, class: "nav-link" %>                
+            </li>
+            <li class="nav-item">
+                <%= link_to "Contact Us", pages_contact_path, class: "nav-link" %>
+            </li>
+            <li class="nav-item">
+                <%= link_to "Sign Up", new_user_registration_path, class: "nav-link" %>
+            </li>
+            <li class="nav-item">
+                <%= link_to "Sign In", new_user_session_path, class: "nav-link" %>
+            </li>
+            <li class="nav-item">
+                <%= link_to "Sign Out", destroy_user_session_path, method: :delete, class: "nav-link" %>
+            </li>            
+        </ul>
     </div>
 </nav>
+
+
