--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -8,36 +8,43 @@
 
 
     <div class="collapse navbar-collapse" id="navbarColor01">
-        <ul class="navbar-nav mr-auto">
-            <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                Dropdown
-                </a>
-                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <a class="dropdown-item" href="#">Action</a>
-                <a class="dropdown-item" href="#">Another action</a>
-                <div class="dropdown-divider"></div>
-                <a class="dropdown-item" href="#">Something else here</a>
-                </div>
-            </li>
-        </ul>
-        <ul class="navbar-nav">
+        <ul class="navbar-nav ml-auto">
             <li class="nav-item">
                 <%= link_to "About Us", pages_about_path, class: "nav-link" %>                
             </li>
             <li class="nav-item">
                 <%= link_to "Contact Us", pages_contact_path, class: "nav-link" %>
             </li>
+
+           
+            <!-- If no-one is signed in, then display Sign Up and Sign In -->
+            <!-- current_user is supported by devise -->
+            <!-- I can imbed conditional w/in the Ruby script-->
             <li class="nav-item">
-                <%= link_to "Sign Up", new_user_registration_path, class: "nav-link" %>
+                <%= link_to "Sign Up", new_user_registration_path, class: "nav-link" unless current_user %>
             </li>
             <li class="nav-item">
-                <%= link_to "Sign In", new_user_session_path, class: "nav-link" %>
+                <%= link_to "Sign In", new_user_session_path, class: "nav-link" unless current_user %>
             </li>
-            <li class="nav-item">
-                <%= link_to "Sign Out", destroy_user_session_path, method: :delete, class: "nav-link" %>
-            </li>            
         </ul>
+
+        <% if current_user %>
+        <ul class="navbar-nav">
+            <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                <%= current_user.username %>
+                </a>
+                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                    <a class="dropdown-item" href="#">Action</a>
+                    <a class="dropdown-item" href="#">Another action</a>
+                    <%= link_to "Edit My Profile", edit_user_registration_path, class: "dropdown-item" %>  
+                    <div class="dropdown-divider"></div>
+                    <%= link_to "Sign Out", destroy_user_session_path, method: :delete, class: "dropdown-item" %>
+
+                </div>
+            </li>
+        </ul>
+        <% end %>
     </div>
 </nav>
 
