--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -26,6 +26,7 @@
             <li class="nav-item">
                 <%= link_to "Sign In", new_user_session_path, class: "nav-link" unless current_user %>
             </li>
+            <li class="nav-item"> <%= link_to "Create an Article", new_article_path, class: "nav-link" %> </li>
         </ul>
 
         <% if current_user %>
@@ -35,8 +36,7 @@
                 <%= current_user.username %>
                 </a>
                 <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown" >
-                    <a class="dropdown-item" href="#">Action</a>
-                    <a class="dropdown-item" href="#">Another action</a>
+                    <%= link_to "My Articles", articles_path, class: "dropdown-item" %>  
                     <%= link_to "Edit My Profile", edit_user_registration_path, class: "dropdown-item" %>  
                     <div class="dropdown-divider"></div>
                     <%= link_to "Sign Out", destroy_user_session_path, method: :delete, class: "dropdown-item" %>
