--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,7 @@
   <body>
     <%= render "layouts/nav" %>
     <%= bootstrap_flash %>
-    <div class="container_fluid">     
+    <div class="col align-self-start">     
       <%= yield %>
     </div>
 
