--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -36,7 +36,7 @@
                 <%= current_user.username %>
                 </a>
                 <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown" >
-                    <%= link_to "My Articles", articles_path, class: "dropdown-item" %>  
+                    <%= link_to "All Articles", articles_path, class: "dropdown-item" %>  
                     <%= link_to "Edit My Profile", edit_user_registration_path, class: "dropdown-item" %>  
                     <div class="dropdown-divider"></div>
                     <%= link_to "Sign Out", destroy_user_session_path, method: :delete, class: "dropdown-item" %>
