--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -150,11 +150,11 @@
         <div class="well">
             <h4>Recent Posts</h4>
             <!-- Post the body of the last article posted -->
-            <% @articles.each do |art| %>
+            <!-- <% @articles.each do |art| %>
                 Created by: <%= art.user.username %><br />
                 <strong> <%= link_to art.title, art %> </strong>
                 <p> <%= truncate(art.body) %> </p>
-            <% end %>
+            <% end %> -->
         </div>
     </div>
 </div>
