--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -149,6 +149,12 @@
         <!-- Side Widget Well --> 
         <div class="well">
             <h4>Recent Posts</h4>
+            <!-- Post the body of the last article posted -->
+            <% @articles.each do |art| %>
+                Created by: <%= art.user.username %><br />
+                <strong> <%= link_to art.title, art %> </strong>
+                <p> <%= truncate(art.body) %> </p>
+            <% end %>
         </div>
     </div>
 </div>
