--- a/app/views/layouts/_foot.html.erb
+++ b/app/views/layouts/_foot.html.erb
@@ -1,66 +1,22 @@
 
-<!-- If a user is signed in, display the simple footer -->
-<% if current_user %> <!-- current_user is supported by devise -->
+<footer class="footer-distributed navbar-fixed-bottom">
+    <div class="footer-right">
+        <a href="#"><i class="fab fa-facebook"></i></a>
+        <a href="#"><i class="fab fa-twitter"></i></a>
+        <a href="#"><i class="fab fa-linkedin"></i></a>
+        <a href="#"><i class="fab fa-github"></i></a>
+    </div>
 
-<!-- Adopted from https://www.udemy.com/ruby-on-rails-a-beginners-guide-free -->
-
-    <footer class="footer-distributed">
-            <div class="footer-right">
-                <a href="#"><i class="fab fa-facebook"></i></a>
-                <a href="#"><i class="fab fa-twitter"></i></a>
-                <a href="#"><i class="fab fa-linkedin"></i></a>
-                <a href="#"><i class="fab fa-github"></i></a>
-            </div>
-    
-            <div class="footer-left">
-                <p class="footer-links">
-                    ·
-                    <a class="page-scroll" href="#portfolio">Contact Us</a>
-                    ·
-                    <a class="page-scroll" href="#services">About Us</a>
-                    ·
-                </p>
-                <p> </p>
-            </div>
-        </footer>
+    <div class="footer-left">
+        <p class="footer-links">
+            ·
+            <%= link_to "Contact Us", pages_contact_path, class: "page-scroll" %>
+            ·
+            <%= link_to "About Us", pages_about_path, class: "page-scroll" %>
+            ·
+        </p>
+        <p> </p>
+    </div>
+</footer>
 
 
-<!-- If no-one is signed in, then display the verbose footer -->
-<% else %>
-    <!-- Second footer, also adopted from https://www.udemy.com/ruby-on-rails-a-beginners-guide-free -->
-
-    <footer class="footer-distributed">
-        <div class="footer-left">
-            <h3>DoYeun<span>Kim</span></h3>
-            <p class="footer-links">
-                <a href="#">Home</a>
-                ·
-                <a href="#">Blog</a>
-                ·
-                <a href="#">Pricing</a>
-                ·
-                <a href="#">About</a>
-                ·
-                <a href="#">Faq</a>
-                ·
-                <a href="#">Contact</a>
-            </p>
-            <p class="footer-company-name">Company Name &copy; 2019</p>
-            <div class="footer-icons">
-                <a href="#"><i class="fab fa-facebook"></i></a>
-                <a href="#"><i class="fab fa-twitter"></i></a>
-                <a href="#"><i class="fab fa-linkedin"></i></a>
-                <a href="#"><i class="fab fa-github"></i></a>
-            </div>
-        </div>
-        <div class="footer-right">
-            <p>Contact Us</p>
-            <form action="#" method="post">
-                <input type="text" name="email" placeholder="Email" />
-                <textarea name="message" placeholder="Message"></textarea>
-                <button>Send</button>
-            </form>
-        </div>
-    </footer>
-
-<% end %>
