--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -3,10 +3,6 @@
 <div class="row">
     <div class="col-lg-12 text-center">
         <h1>About Us</h1>
-        <p class="lead">Test Text</p>
-        <ul class="list-unstyled">
-            <li>List Item</li>
-            <li>List Item 2</li>
-        </ul>
+        <p class="lead"> This is my first Ruby on Rails application </p>
     </div>
 </div>
