--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,24 +1,58 @@
-<p id="notice"><%= notice %></p>
+<div class="row">
 
-<p>
-  <strong>Created by:</strong>
-  <%= @article.user.username %>
-</p>
+  <!-- Blog Post Content Column -->
+  <div class="col-lg-8">
+    <!-- Blog Post -->
+    <!-- Title -->
+    <h1 style="font-size: 62.5px;">
+      <%= @article.title %>
+    </h1>
 
-<p>
-  <strong>Title:</strong>
-  <%= @article.title %>
-</p>
+    <!-- Author -->
+    <p class="lead">
+      <%= @article.user.username %>
+    </p>
 
-<p>
-  <strong>Body:</strong>
-  <%= @article.body %>
-</p>
+    <hr>
 
+    <!-- Date/Time -->
+    <p><span class="glyphicon glyphicon-time"></span> Was Posted:
+  
+    <hr>
+    <!-- Preview Image -->
+  
+    <hr>
+    <!-- Post Content -->
+  
+    <hr>
+    
+    <!-- Blog Comments -->
+    <%= @article.body %>
+
+    <%= render  @article.comments %>
+    <!-- Comments Form -->
+    <%= render 'comments/form' %>
+
+    <div class="well">
+
+    </div>
+    <hr>
+    <!-- Posted Comments -->
+    <!-- Comment -->
+  </div>
+
+    <!-- Blog Sidebar Widgets Column -->
+    <div class="col-md-4">
+      <!-- Blog Search Well -->
+    
+      <!-- Blog Categories Well -->
+    
+      <!-- Side Widget Well -->
+      <div class="well">
+  
+      </div>
+  </div>
+</div>
 
 <%= link_to 'Edit', edit_article_path(@article) %> |
 <%= link_to 'Back', articles_path %>
-
-<br>
-
-<%= render  "comments/form" %>
