--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -2,150 +2,23 @@
 
 <div class="row">
     <!-- Blog Post Content Column -->
-    <div class="col-lg-8">
+    <div class="col-10">
         <!-- Blog Post -->
         <!-- Title -->
-        <h1>Blog Post Title</h1>
-        
-        <!-- Author -->
-        <p class="lead">
-            by <a href="#">Start Bootstrap</a>
-        </p>
-        <hr>
-        <!-- Date/Time -->
-        <p><span class="glyphicon glyphicon-time"></span> Posted on August 24, 2013 at 9:00 PM</p>
-        <hr>
-        <!-- Preview Image -->
-        <img class="img-responsive" src="http://placehold.it/900x300" alt="">
-        <hr>
-        <!-- Post Content -->
-        <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ducimus, vero,
-        obcaecati, aut, error quam sapiente nemo saepe quibusdam sit excepturi nam quia corporis eligendi
-        eos magni recusandae laborum minus inventore?</p>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ut, tenetur natus doloremque laborum
-        quos iste ipsum rerum obcaecati impedit odit illo dolorum ab tempora nihil dicta earum fugiat.
-        Temporibus, voluptatibus.</p>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos, doloribus, dolorem iusto
-        blanditiis unde eius illum consequuntur neque dicta incidunt ullam ea hic porro optio ratione repellat
-        perspiciatis. Enim, iure!</p>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Error, nostrum, aliquid, animi, ut quas
-        placeat totam sunt tempora commodi nihil ullam alias modi dicta saepe minima ab quo voluptatem
-        obcaecati?</p>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Harum, dolor quis. Sunt, ut, explicabo,
-        aliquam tenetur ratione tempore quidem voluptates cupiditate voluptas illo saepe quaerat numquam
-        recusandae? Qui, necessitatibus, est!</p>
-        <hr>
-        <!-- Blog Comments -->
-        <!-- Comments Form -->
-        <div class="well">
-            <h4>Leave a Comment:</h4>
-            <form role="form">
-                <div class="form-group">
-                    <textarea class="form-control" rows="3"></textarea>
-                </div>
-                <button type="submit" class="btn btn-primary">Submit</button>
-            </form>
-        </div>
-        <hr>
-        
-        <!-- Posted Comments -->
-        <!-- Comment -->
-        <div class="media">
-            <a class="pull-left" href="#">
-                <img class="media-object" src="http://placehold.it/64x64" alt="">
-            </a>
-            <div class="media-body">
-                <h4 class="media-heading">Start Bootstrap
-                    <small>August 25, 2014 at 9:30 PM</small>
-                </h4>
-                Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin
-                commodo. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc
-                ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.
-            </div>
-        </div>
-        <!-- Comment -->
-        <div class="media">
-            <a class="pull-left" href="#">
-                <img class="media-object" src="http://placehold.it/64x64" alt="">
-            </a>
-            <div class="media-body">
-                <h4 class="media-heading">Start Bootstrap
-                    <small>August 25, 2014 at 9:30 PM</small>
-                </h4>
-                Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin
-                commodo. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc
-                ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.
-            
-                <!-- Nested Comment -->
-                <div class="media">
-                    <a class="pull-left" href="#">
-                        <img class="media-object" src="http://placehold.it/64x64" alt="">
-                    </a>
-                    <div class="media-body">
-                        <h4 class="media-heading">Nested Start Bootstrap
-                            <small>August 25, 2014 at 9:30 PM</small>
-                        </h4>
-                        Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin
-                        commodo. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc
-                        ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.
-                    </div>
-                </div>
-            <!-- End Nested Comment -->
-            </div>
+        <div class="jumbotron">
+            <h1 class="display-4">Welcome to Do Yeun's Articles</h1>
+            <p class="lead">This is my first Ruby on Rails Application</p>
+            <hr class="my-4">
+            <p>It took me <strong>5 days, 10+ Postgresql resets, 50+ restarts, 3 failed Ubuntu dual booting with all possible errors, 
+                1 successful Windows reset, 3 redo's on dualbooted Ubuntu, giving my credit card info away to Heroku, and 
+                lots of cursing and punching the air </strong> to make this possible. </p>
         </div>
     </div>
-       
+
+
 
     <!-- Blog Sidebar Widgets Column -->
-    <div class="col-md-4">
-    <!-- Blog Search Well -->
-        <div class="well">
-            <h4>Blog Search</h4>
-            <div class="input-group">
-                <input type="text" class="form-control">
-                <span class="input-group-btn">
-                    <button class="btn btn-default" type="button">
-                        <span class="glyphicon glyphicon-search"></span>
-                    </button>
-                </span>
-            </div>
-        <!-- /.input-group -->
-        </div>
-
-
-        <!-- Blog Categories Well -->
-        <div class="well">
-            <h4>Blog Categories</h4>
-            <div class="row">
-                <div class="col-lg-6">
-                    <ul class="list-unstyled">
-                        <li><a href="#">Category Name</a>
-                        </li>
-                        <li><a href="#">Category Name</a>
-                        </li>
-                        <li><a href="#">Category Name</a>
-                        </li>
-                        <li><a href="#">Category Name</a>
-                        </li>
-                    </ul>
-                </div>
-                <div class="col-lg-6">
-                    <ul class="list-unstyled">
-                        <li><a href="#">Category Name</a>
-                        </li>
-                        <li><a href="#">Category Name</a>
-                        </li>
-                        <li><a href="#">Category Name</a>
-                        </li>
-                        <li><a href="#">Category Name</a>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-            <!-- /.row -->
-        </div>
-
-
+    <div class="col-2" style="padding-top: 1%">
         <!-- Side Widget Well --> 
         <div class="well">
             <h4>Recent Posts</h4>
